[package]
name = "wiring_rs"
version = "0.1.1"
authors = ["chris <chris.kind.man@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="wiring_rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "mybin"
path = "src/main.rs"

[dependencies.pyo3]
version = "0.14.5"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py36" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.6
features = ["extension-module", "abi3-py36"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4" 
regex = "1.5"

